--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "homepage": "https://uniswap.exchange",
   "private": true,
   "dependencies": {
+    "@portis/web3": "^2.0.0-beta.49",
     "@reach/dialog": "^0.2.8",
     "@reach/tooltip": "^0.2.0",
     "@uniswap/sdk": "^1.0.0-beta.4",
     "copy-to-clipboard": "^3.2.0",
     "escape-string-regexp": "^2.0.0",
-    "history": "^4.9.0",
     "ethers": "^4.0.36",
+    "history": "^4.9.0",
     "i18next": "^15.0.9",
     "i18next-browser-languagedetector": "^3.0.1",
     "i18next-xhr-backend": "^2.0.1",
@@ -28,6 +29,7 @@
     "react-spring": "^8.0.20",
     "react-switch": "^5.0.1",
     "styled-components": "^4.2.0",
+    "web3": "^1.2.2",
     "web3-react": "5.0.5"
   },
   "scripts": {
